--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ logo:                  /assets/icons/icon.png
 # This should be the same author as first entry in `_data/authors.yml`.
 # Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
 author:
-  name:                <firstname> <lastname>
+  name:                <D> <sh>
   email:               <dshsec@outlook.com>
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
