--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            https://placehold.it/128x128
+    path:            https://github.com/DshSec/DshSec.github.io/blob/master/assets/img/headimg/headimg.jpg?raw=true
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
       1x:            https://placehold.it/128x128
