--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ title:                 DshSec
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  This is a blog 
+  This is a blog
 
 # A shorter description for the sidebar.
 tagline:               >
@@ -46,7 +46,10 @@ author:
   email:               <dshsec@outlook.com>
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
-
+  picture:  /assets/img/headimg/Headportrait.jpg
+  social:
+      twitter:         <https://twitter.com/Dshsec1>
+      github:          <https://github.com/DshSec/>
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             © 2019. All rights reserved.
 
