--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,10 @@ author:
   email:               <dshsec@outlook.com>
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
-  picture:  /assets/img/headimg/Headportrait.jpg
+  picture:  /assets/img/Headportrait/Headportrait.jpg
   social:
-      twitter:         <https://twitter.com/Dshsec1>
-      github:          <https://github.com/DshSec/>
+      twitter:         https://twitter.com/Dshsec1
+      github:          https://github.com/DshSec/
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             © 2019. All rights reserved.
 
