--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,18 +12,17 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            https://github.com/DshSec/DshSec.github.io/blob/master/assets/img/headimg/headimg.jpg?raw=true
+    path:            /assets/img/Headportrait/Headportrait.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://github.com/DshSec/DshSec.github.io/blob/master/assets/img/headimg/headimg.jpg?raw=true
-      2x:            https://github.com/DshSec/DshSec.github.io/blob/master/assets/img/headimg/headimg.jpg?raw=true
-
+      1x:            /assets/img/Headportrait/Headportrait.jpg
+      2x:            /assets/img/Headportrait/Headportrait.jpg
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <https://twitter.com/Dshsec1>
-    github:          <https://github.com/DshSec/>
+    twitter:         https://twitter.com/Dshsec1
+    github:          https://github.com/DshSec/
     # email:           mailto:<mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
