--- a/_config.yml
+++ b/_config.yml
@@ -46,18 +46,12 @@ vimeo: myvimeo
 email: myemail@gmail.com
 
 authors:
-    johndoe:
+    Dshsec:
         name: DshSec
-        bio: A Man who travels the world eating noodles
+        bio: A Little Chicken Loving Information Security
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        twitter: Dshsec
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
