--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ quora: userquora
 reddit: username
 medium: medium
 vimeo: myvimeo
-email: myemail@gmail.com
+email: dshsec@outlook.com
 
 authors:
     Dshsec:
