--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: DshSec
-bio: A Man who travels the world eating noodles
+bio: A Little Chicken Loving Information Security
 
 # twitter summary info
 description: A blog about technology and stuff related
