--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url: https://dshsec.github.io
 
 permalink: /:title/
 
-markdown: kramdown
+#markdown: kramdown
 highlighter: rouge
 
 # To enable google analytics, supply your token below
